--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nest-cookies",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "A module to work with setting and reading cookies in NestJS",
   "keywords": [
     "NestJS",
@@ -13,16 +13,19 @@
   "private": false,
   "license": "MIT",
   "files": [
-    "./dist"
+    "dist"
   ],
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "prebuild:deploy": "rimraf dist",
+    "build:deploy": "nest build -p tsconfig.deploy.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "preversion": "pnpm build:deploy",
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
   },
   "devDependencies": {
