--- a/package.json
+++ b/package.json
@@ -2,19 +2,11 @@
   "name": "nest-cookies",
   "version": "1.2.1",
   "description": "A module to work with setting and reading cookies in NestJS",
-  "keywords": [
-    "NestJS",
-    "Nest",
-    "Express",
-    "Fastify",
-    "Cookies"
-  ],
+  "keywords": ["NestJS", "Nest", "Express", "Fastify", "Cookies"],
   "author": "Jay McDoniel <me@jaymcdoniel.dev>",
   "private": false,
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
@@ -29,48 +21,51 @@
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.0.0",
-    "@commitlint/config-conventional": "^12.0.0",
-    "@nestjs/cli": "^7.0.0",
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/graphql": "^7.6.0",
-    "@nestjs/platform-express": "^7.0.0",
-    "@nestjs/platform-fastify": "^7.4.2",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
-    "@types/express": "^4.17.3",
-    "@types/jest": "26.0.20",
-    "@types/node": "^14.14.9",
-    "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
-    "apollo-server-express": "^2.17.0",
-    "apollo-server-fastify": "^2.17.0",
-    "conventional-changelog-cli": "^2.1.0",
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
+    "@mercuriusjs/gateway": "^1.2.0",
+    "@nestjs/apollo": "^11.0.5",
+    "@nestjs/cli": "^9.4.2",
+    "@nestjs/common": "^9.4.0",
+    "@nestjs/core": "^9.4.0",
+    "@nestjs/graphql": "^11.0.5",
+    "@nestjs/mercurius": "^11.0.5",
+    "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/platform-fastify": "^9.4.0",
+    "@nestjs/schematics": "^9.1.0",
+    "@nestjs/testing": "^9.4.0",
+    "@types/express": "^4.17.17",
+    "@types/jest": "29.5.1",
+    "@types/node": "^20.1.2",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "5.59.5",
+    "@typescript-eslint/parser": "5.59.5",
+    "apollo-server-express": "^3.12.0",
+    "apollo-server-fastify": "^3.12.0",
+    "conventional-changelog-cli": "^2.2.2",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "7.21.0",
-    "eslint-config-prettier": "^8.0.0",
-    "eslint-plugin-import": "^2.20.1",
-    "fastify": "^3.3.0",
-    "graphql": "^15.3.0",
-    "graphql-tools": "^7.0.1",
-    "husky": "^5.0.9",
-    "jest": "26.6.3",
-    "lint-staged": "^10.3.0",
-    "prettier": "^2.1.2",
+    "eslint": "8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "fastify": "^4.17.0",
+    "graphql": "^16.6.0",
+    "graphql-tools": "^8.3.20",
+    "husky": "^8.0.3",
+    "jest": "29.5.0",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4",
-    "supertest": "^6.0.1",
-    "ts-jest": "26.5.3",
-    "ts-loader": "^8.0.10",
-    "ts-node": "^9.0.0",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.2"
+    "rimraf": "^5.0.0",
+    "rxjs": "^7.8.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "29.1.0",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.0.4"
   },
   "peerDependencies": {
-    "@nestjs/common": "^7.0.0"
+    "@nestjs/common": ">=7.0.0"
   },
   "husky": {
     "hooks": {
@@ -79,13 +74,8 @@
     }
   },
   "lint-staged": {
-    "*.ts": [
-      "prettier --write",
-      "eslint --ext ts"
-    ],
-    "*.{js,json,html,md}": [
-      "prettier --write"
-    ]
+    "*.ts": ["prettier --write", "eslint --ext ts"],
+    "*.{js,json,html,md}": ["prettier --write"]
   },
   "config": {
     "commitizen": {
@@ -93,11 +83,7 @@
     }
   },
   "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
+    "moduleFileExtensions": ["js", "json", "ts"],
     "rootDir": "src",
     "testRegex": ".spec.ts$",
     "transform": {
