--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "nest-cookies",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "A module to work with setting and reading cookies in NestJS",
-  "keywords": ["NestJS", "Nest", "Express", "Fastify", "Cookies"],
+  "keywords": [
+    "NestJS",
+    "Nest",
+    "Express",
+    "Fastify",
+    "Cookies"
+  ],
   "author": "Jay McDoniel <me@jaymcdoniel.dev>",
   "private": false,
   "license": "MIT",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
@@ -74,8 +82,13 @@
     }
   },
   "lint-staged": {
-    "*.ts": ["prettier --write", "eslint --ext ts"],
-    "*.{js,json,html,md}": ["prettier --write"]
+    "*.ts": [
+      "prettier --write",
+      "eslint --ext ts"
+    ],
+    "*.{js,json,html,md}": [
+      "prettier --write"
+    ]
   },
   "config": {
     "commitizen": {
@@ -83,7 +96,11 @@
     }
   },
   "jest": {
-    "moduleFileExtensions": ["js", "json", "ts"],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
     "rootDir": "src",
     "testRegex": ".spec.ts$",
     "transform": {
